# buildlens

./: README.md
backend/: .env.example  pyproject.toml
backend/src/buildlens/adapters/: __init__.py
backend/src/buildlens/api/: __init__.py  app.py  errors.py  middleware.py
backend/src/buildlens/core/: __init__.py  config.py  logging_setup.py
backend/src/buildlens/db/: __init__.py
backend/tests/: conftest.py
backend/tests/api/: test_platform.py
docs/: decisions.md
