[project]
name = "buildlens"
version = "0.1.0"
description = "LLM-powered diagnostics for CI failures"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.14.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/buildlens"]
